Add pading for some sections

--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ ul{
     gap: 40px;
     flex: 2 1 auto;
     background-color: #1F2937;
+    padding: 50px;
 }
 .placeholder{
     width: 200px;
@@ -50,6 +51,7 @@ ul{
     justify-content: center;
     flex-direction: column;
     background-color: #E5E7EB;
+    padding: 30px;
 }
 .call-to-action{
     display: flex;
@@ -69,7 +71,7 @@ ul{
     background-color: #1F2937;
     font-size: 18px;
     color: #E5E7EB;
-    padding: 15px;
+    padding: 30px;
 }
 .middle-space{
     display: flex;
@@ -77,7 +79,14 @@ ul{
     gap: 8px;
 }
 .info{
-    max-width: 200px;
+    max-width: 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 30px;
+    gap: 15px;
+    text-align: center;
 }
 .quote{
     max-width: 600px;
@@ -120,4 +129,16 @@ button{
 }
 .signup{
     border-color: #F9FAF8;
+}
+.middle-title{
+    font-size: 36px;
+    font-weight: 900;
+    color: #1F2937;
+    padding: 20px;
+}
+.empty-space{
+    height: 100px;
+    width: 100px;
+    border: 5px solid blue;
+    border-radius: 10px;
 }
